Fixed issue with button wrapping issue

--- a/style.css
+++ b/style.css
@@ -103,7 +103,7 @@ button {
 
 .learn-more {
   background-color: var(--light-gray);
-  border: none;
+  border: 1px solid transparent;
   line-height: 2.25;
   padding: 0 20px;
   font-size: 1rem;
